Fix education year badge alignment by making table full width

--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -8,10 +8,12 @@ div.container-link-button {
 
 table.table-cv {
   background-color: transparent !important;
+  width: 100%;
 
   td,
   th {
     padding: 1px;
+    text-align: center;
   }
 }
 
